# leni-deni

./: Cargo.toml  README.md  TODO.md
src/: main.rs
src/cli/: commands.rs  handler.rs  menu.rs  mod.rs  ui.rs
src/network/: connection.rs  discovery.rs  file_transfer.rs  mod.rs  nat.rs  protocol.rs  socket.rs
src/security/: authentication.rs  encryption.rs  mod.rs
src/storage/: distributed.rs  metadata.rs  mod.rs  sharing.rs
src/transfer/: chunking.rs  mod.rs  progress.rs  throttling.rs  verification.rs
src/utils/: logging.rs
