[package]
name = "leni-deni"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1.4"
futures = "0.3"
thiserror = "1.0"
uuid = { version = "1.3", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
mdns-sd = "0.7"
sha2 = "0.10"
clap = { version = "4.4", features = ["derive"] }
chacha20poly1305 = "0.10"
rand = "0.8"
tui = "0.19.0"
crossterm = "0.25.0"
dialoguer = "0.10.3"
indicatif = "0.17.3"
